# anomalib-demo

./: .pre-commit-config.yaml  README.MD  README.md  anomalib_demo.ipynb  blogpost.MD  pyproject.toml
anomalib_demo/: anomalib_demo.ipynb  patchcore_config.yaml
anomalib_demo/cfg/: patchcore_config.yaml
blogpost/: blogpost.MD  blogpost.md
cfg/: patchcore_config.yaml
