[tool.poetry]
name = "anomalib-demo"
version = "0.1.0"
description = ""
authors = ["Toon Van Craenendonck <toon@dataroots.io>"]
readme = "README.md"
packages = [{include = "anomalib_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
#anomalib = "^0.3.7"
anomalib = { git = "git@github.com:toon-vc/anomalib.git"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"