[tool.poetry]
name = "anomalib-demo"
version = "0.1.0"
description = ""
authors = ["Toon Van Craenendonck <toon@dataroots.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
anomalib = { git = "git@github.com:toon-vc/anomalib.git"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"
flake8 = "^5.0.4"
nbqa = "^1.5.3"
isort = "^5.10.1"
black = "^22.10.0"
pre-commit = "^2.20.0"
pylint = "^2.15.5"
databooks = "^1.3.6"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"